Rename steps in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,13 +98,13 @@ jobs:
         run: firebase emulators:start --only firestore &
 
       # Run Unit tests
-      - name: Run tests
+      - name: Run unit tests
         run: |
           # To run the CI with debug information, add --info
           ./gradlew check --parallel --build-cache
 
       # Run connected tests on the emulator
-      - name: run tests
+      - name: Run android tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 34
