--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAHkGMX1AGthHeTC7LU8sKfyEAJ2danMgo" />
+            android:value="${GOOGLE_MAPS_API_KEY}" />
 
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
