--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -2,7 +2,7 @@ name: APK Generation
 on:
   push:
     branches:
-      - 'releases/**'
+      - "main"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: "temurin"
           java-version: 17
 
       - name: Gradle cache
