--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -3,6 +3,13 @@ on:
   push:
     branches:
       - "main"
+
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+
 jobs:
   build:
     runs-on: ubuntu-latest
