--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -53,12 +53,20 @@ jobs:
           SECRET_PROPERTIES: ${{ secrets.SECRET_PROPERTIES }}
         run: echo $SECRET_PROPERTIES > $GITHUB_WORKSPACE/secrets.properties
 
-      - name: Build Release apk
-        run: |
-          ./gradlew assembleRelease
-      - name: Get release file apk path
-        id: releaseApk
-        run: echo "apkfile=$(find app/build/outputs/apk/release/*.apk)" >> $GITHUB_OUTPUT
+      - name: Sign app APK
+        uses: r0adkll/sign-android-release@v1
+
+        # ID used to access action output
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.KEYSTORE_FILE }}
+          alias: ${{ secrets.APK_ALIAS }}
+          keyStorePassword: ${{ secrets.APK_KEY_PASSWORD }}
+          keyPassword: ${{ secrets.APK_KEY_PASSWORD }}
+        env:
+          # override default build-tools version (33.0.0) -- optional
+          BUILD_TOOLS_VERSION: "34.0.0"
 
       - name: Upload Release Build to Artifacts
         uses: actions/upload-artifact@v4
