--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -53,6 +53,14 @@ jobs:
           SECRET_PROPERTIES: ${{ secrets.SECRET_PROPERTIES }}
         run: echo $SECRET_PROPERTIES > $GITHUB_WORKSPACE/secrets.properties
 
+      - name: Build Release apk
+        run: |
+          ./gradlew assembleRelease
+
+      - name: Get release file apk path
+        id: releaseApk
+        run: echo "apkfile=$(find app/build/outputs/apk/release/*.apk)" >> $GITHUB_OUTPUT
+
       - name: Sign app APK
         uses: r0adkll/sign-android-release@v1
 
