--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -38,7 +38,7 @@ jobs:
           ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_FILE }}
           ENCODED_PASSWORDS: ${{ secrets.KEYSTORE_PASSWORDS }}
         run: |
-          echo $ENCODED_KEYSTORE | base64 -di > keystore.jks
+          echo $ENCODED_KEYSTORE | base64 -d > keystore.jks
           echo $ENCODED_PASSWORDS | base64 -di > keystore.properties
 
       # Load the google-services.json file that is necessary to launch with the Firebase SDK
