--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -37,8 +37,7 @@ jobs:
         env:
           ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_FILE }}
           ENCODED_PASSWORDS: ${{ secrets.KEYSTORE_PASSWORDS }}
-        run: |
-          echo $ENCODED_PASSWORDS | base64 -di > keystore.properties
+        run:
           echo $ENCODED_KEYSTORE
          
 
