--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,16 +1,17 @@
-name: Build APK
+name: Android Build
 
 on:
   push:
     branches:
-      - M2
+      - lastChance  # Trigger on pushes to the M2 branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -21,11 +22,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build APK
-        run: ./gradlew assembleRelease
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug  # Use assembleRelease for release APK
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: app-release
-          path: app/build/outputs/apk/release/app-release.apk
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk  # Adjust path according to your project structure
