--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -37,7 +37,7 @@ jobs:
           DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
         run: echo $DATA | base64 -di > app/google-services.json
       - name: Load Secrets
-        run: echo ${{ secrets.SECRET_PROPERTIES }} >> app/secrets.properties
+        run: echo ${{ secrets.SECRET_PROPERTIES }} >> /home/runner/work/skysync/skysync/secrets.properties
       - name: Set execution flag for gradlew
         run: chmod +x gradlew
       - name: Build APK
